--- a/css/style.css
+++ b/css/style.css
@@ -126,13 +126,15 @@ main{grid-area: principal;
 }
 
 .conteudo{
-    display: flex;
-    flex-direction:column;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction:column;
+    align-items: center; */
     padding: 30px;
-    margin-top: 30px;
-    margin: 15px 650px 30px;
+    /* margin-top: 30px;
+    margin: 15px 650px 30px; */
     text-align: center;
+    
+    
 }
 
 .caract{
@@ -149,21 +151,29 @@ main{grid-area: principal;
     color: gray;
 }
 
-.conteudos_blocos{
+.conteudo_blocos{
     padding: 40px;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-items: start;
+    display: flex;
+    flex-wrap: wrap;
     row-gap: 20px;
+    margin: 10px;
+    column-gap: 15px;
+    
+    
 }
 
 .bloco1{
     background-color: #ff6b81;
     border-radius: 7px;
     padding: 20px;
-    width: 300px;
-    margin: 0 auto;
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    width: 30%; 
+    
 }
+
+
 
 .bloco1 > h3{
     font-size: 20px;
@@ -172,4 +182,144 @@ main{grid-area: principal;
 
 .bloco1{
     color: #fff;
+    text-align:justify;
+}
+div > h3{
+    color:black;
+}
+
+
+/* FOOTER */
+.rodape{
+    grid-area: rodape;
+    background-color: #ff6b81;
+    color: #fff;
+}
+
+.rodape_titulo{
+    font-size: 30px;
+    margin-top: 100px;
+    text-align: center;
+}
+
+.rodape_dados{
+    display: flex;
+    flex-direction:row;
+    text-align: center;
+    justify-content: space-around;
+    padding: 50px; 
+}
+
+.rodape_dados div{
+    margin-top: 20px;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+/* RESPOMSIVO */
+/* TABLET */
+
+@media screen and (max-width:1200px){
+    .cabecalho2{
+        display: grid;
+        text-align: center;
+        justify-items: start;
+    }
+    .cabecalho2_div{
+        align-items: center;
+        margin: auto;
+        padding: 40px;
+    }
+    .cabecalho2_smart{
+        margin: 0 auto;
+        margin-bottom: 20px;
+
+    }
+
+    .conteudo_prin{
+        text-align: center;
+        padding: 0;
+        margin: 0;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .conteudo_blocos{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    .conteudo_bloco1{
+        width: 300px;
+        height: 300px;
+    }
+    .conteudo_bloco1 > h3, .conteudo_bloco1 > p{
+        padding: 10px;
+    }
+
+    .rodape_dados{
+        padding: 60px;
+        margin: 0;
+    }
+
+}
+
+
+/* SMARTPHONE */
+@media screen and (max-width: 750px) {
+
+    .cabecalho_ini{
+        padding: 20px;
+    }
+
+    .cabecalho_botao{
+        display: none;
+    }
+
+    .cabecalho2_botao{
+        flex-direction: column;
+        margin-left: 45px;
+    }
+
+    .cabecalho_ini{
+        padding: 40px;
+        width: 100%;
+        font-size: 20px;
+    }
+
+    .cabecalho2_smart{
+        padding: 40px;
+        width: 100%;
+        height: auto;
+    }
+
+    .conteudo-blocos{
+        column-gap: 15px;
+        padding: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 20px;
+        margin: 10px;
+        column-gap: 15px;
+       
+        
+    }
+
+    .conteudo_principal{
+        padding: 70px;
+        margin: 0 auto;
+    }
+
+    .rodape_titulo{
+        padding: 50px;
+    }
+
+    .rodape{
+        margin: 0 auto;
+    }
+
+    .rodape_dados{
+        flex-direction: column;
+    }
+
 }
