--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,22 @@ color: #ffffff;
     margin-right: 50px;
 }
 
-.cabecalho_botao:hover{
+.botao1:hover{
     cursor: pointer;
     background-color: #fff;
     color: #ff6b81;
     transition: all 0.3 linear;
+    border: 2px solid black;
+    
+}
+
+
+.botao2:hover{
+    cursor: pointer;
+    background-color: #fff;
+    color: #ff6b81;
+    transition: all 0.3 linear;
+    
 }
 
 .cabecalho2{
@@ -76,7 +87,7 @@ color: #ffffff;
 }
 
 .cabecalho2_subtitulo{
-    font-size: 10px;
+    font-size: 15px;
 }
 
 .cabecalho2_botao{
@@ -157,7 +168,8 @@ main{grid-area: principal;
     flex-wrap: wrap;
     row-gap: 20px;
     margin: 10px;
-    column-gap: 15px;
+    column-gap: 20px;
+    border: 2px solid green;  
     
     
 }
@@ -165,11 +177,14 @@ main{grid-area: principal;
 .bloco1{
     background-color: #ff6b81;
     border-radius: 7px;
-    padding: 20px;
+    padding: 30px;
     padding-top: 10px;
     padding-left: 30px;
     padding-bottom: 30px;
     width: 30%; 
+    ;
+    border: 2px solid rgb(0, 0, 0);
+    
     
 }
 
@@ -204,10 +219,12 @@ div > h3{
 
 .rodape_dados{
     display: flex;
-    flex-direction:row;
+    /* flex-direction:row;  */
     text-align: center;
-    justify-content: space-around;
-    padding: 50px; 
+    justify-content: center;
+    width:;
+    /* padding: 50px;  */
+    border: 2px solid black;
 }
 
 .rodape_dados div{
@@ -271,14 +288,28 @@ div > h3{
     .cabecalho_ini{
         padding: 20px;
     }
+    
+    .cabecalho2_titulo{
+        font-size: 30px;
+        padding: 20px;
+    }
+
+    .botao1, .botao2{
+        padding: 20px;
+        margin-right: 50px;
+        width: 300px;
+        height: 60px;
+
+    }
 
     .cabecalho_botao{
         display: none;
     }
 
     .cabecalho2_botao{
-        flex-direction: column;
+        flex-direction:column;
         margin-left: 45px;
+
     }
 
     .cabecalho_ini{
@@ -293,19 +324,21 @@ div > h3{
         height: auto;
     }
 
-    .conteudo-blocos{
-        column-gap: 15px;
+    .conteudo_blocos{
+        /* column-gap: 15px;
         padding: 40px;
         display: flex;
         flex-wrap: wrap;
         row-gap: 20px;
         margin: 10px;
-        column-gap: 15px;
-       
-        
+        column-gap: 15px; */
+        border: 1px solid black; 
     }
+
+
     .bloco1{
-        width: 300px;
+        width: 400px;
+
  }
     .conteudo_principal{
         padding: 70px;
