--- a/css/style.css
+++ b/css/style.css
@@ -50,21 +50,25 @@ color: #ffffff;
     margin-right: 50px;
 }
 
+.cabecalho_botao:hover{
+    cursor: pointer;
+    background-color: #fff;
+    color: #ff6b81;
+    transition: all 0.3s linear;
+    
+}
+
 .botao1:hover{
     cursor: pointer;
     background-color: #fff;
     color: #ff6b81;
-    transition: all 0.3 linear;
-    border: 2px solid black;
-    
-}
-
+    transition: all 0.3s linear;}
 
 .botao2:hover{
     cursor: pointer;
-    background-color: #fff;
+    background-color: #ffffff;
     color: #ff6b81;
-    transition: all 0.3 linear;
+    transition: all 0.3s linear;
     
 }
 
@@ -93,13 +97,14 @@ color: #ffffff;
 .cabecalho2_botao{
     display: flex;
     gap: 30px;
+    
 }
 
 .botao1{
     border-radius: 5px;
     border: 2px solid white;
-    background-color: #ffffff;
-    color: #ff6b81;
+    background-color: #ff6b81;
+    color: #fcfcfc;
     padding: 20px;
     margin-right: 50px;
     width: 180px;
@@ -119,17 +124,6 @@ color: #ffffff;
     font-size: large;
 }
 
-.botao1:hover{
-    cursor: pointer;
-    background-color: #fff;
-    color:#ff6b81;
-    transition: all 0.3 linear;
-}
-
-.botao2:hover{
-    cursor: pointer;
-    transition: all 0.3 linear;
-}
 
 /* MAIN */
 main{grid-area: principal;
@@ -169,7 +163,7 @@ main{grid-area: principal;
     row-gap: 20px;
     margin: 10px;
     column-gap: 20px;
-    border: 2px solid green;  
+     
     
     
 }
@@ -181,11 +175,19 @@ main{grid-area: principal;
     padding-top: 10px;
     padding-left: 30px;
     padding-bottom: 30px;
-    width: 30%; 
-    ;
-    border: 2px solid rgb(0, 0, 0);
+    width: 30%;
     
-    
+}
+
+.conteudo_blocos:hover > :not(:hover){
+  opacity: 4;
+  transform: scale(0.9);
+
+}
+
+.bloco1{
+    transition: .35s;
+    cursor: pointer;
 }
 
 
@@ -219,17 +221,16 @@ div > h3{
 
 .rodape_dados{
     display: flex;
-    /* flex-direction:row;  */
+    flex-direction:row; 
     text-align: center;
     justify-content: center;
-    width:;
-    /* padding: 50px;  */
-    border: 2px solid black;
+    padding: 50px;
 }
 
 .rodape_dados div{
     margin-top: 20px;
     margin-bottom: 100px;
+    width: 200px;
     display: flex;
     flex-direction: column;
 }
@@ -262,9 +263,9 @@ div > h3{
         margin-bottom: 50px;
     }
 
-    .conteudo_blocos{
+    /* .conteudo_blocos{
         grid-template-columns: repeat(2,1fr);
-    }
+    } */
 
     .conteudo_bloco1{
         width: 300px;
@@ -278,7 +279,9 @@ div > h3{
         padding: 60px;
         margin: 0;
     }
-
+    .botao1,.botao2{
+        width: 200px;
+    }
 }
 
 
@@ -324,7 +327,7 @@ div > h3{
         height: auto;
     }
 
-    .conteudo_blocos{
+    /* .conteudo_blocos{
         /* column-gap: 15px;
         padding: 40px;
         display: flex;
@@ -332,14 +335,38 @@ div > h3{
         row-gap: 20px;
         margin: 10px;
         column-gap: 15px; */
-        border: 1px solid black; 
+    
+    }
+
+    .cabecalho_ini{
+        padding: 10px;
+        padding-left: 15px;
+        text-align: center;
+        height: auto;
+        margin-right: 15px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        
+
     }
 
 
     .bloco1{
         width: 400px;
+        
 
- }
+    }
+
+    /* .conteudo{
+        padding: 10px;
+        padding-left: 15px;
+        text-align: center;
+        height: auto;
+        margin-right: 15px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+
+    } */
     .conteudo_principal{
         padding: 70px;
         margin: 0 auto;
@@ -354,7 +381,20 @@ div > h3{
     }
 
     .rodape_dados{
-        flex-direction: column;
+        flex-direction:column;
+        /* padding-bottom: 10px; */
+        /* row-gap: 20px; */
+        margin: 100px;
+
     }
 
-}
+    .rodape_titulo{
+    padding: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    text-align: center;
+    height: auto;
+    margin-right: 15px;
+    margin-top: 10px;
+    margin-bottom: 20px;}
+    
