--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     text-decoration: none;
     outline: none;}
 
+/* VARIAVEIS */
+:root{
+    --corRosa:#6b86ff;
+}
 
 
 body{
@@ -15,12 +19,13 @@ body{
                          'principal'
                          'rodape';
 height: 100vh;
+
                          
 }
 
 /* HEADER */
 header{grid-area: cabecalho;
-background-color: #ff6b81;
+background-color:var(--corRosa);
 color: #ffffff;
 }
 
@@ -44,7 +49,7 @@ color: #ffffff;
 .cabecalho_botao{
     border-radius: 5px;
     border: 2px solid #fff;
-    background-color: #ff6b81;
+    background-color:var(--corRosa);;
     color:#fff;
     padding: 15px;
     margin-right: 50px;
@@ -53,7 +58,7 @@ color: #ffffff;
 .cabecalho_botao:hover{
     cursor: pointer;
     background-color: #fff;
-    color: #ff6b81;
+    color: var(--corRosa);
     transition: all 0.3s linear;
     
 }
@@ -61,13 +66,13 @@ color: #ffffff;
 .botao1:hover{
     cursor: pointer;
     background-color: #fff;
-    color: #ff6b81;
+    color: var(--corRosa);
     transition: all 0.3s linear;}
 
 .botao2:hover{
     cursor: pointer;
     background-color: #ffffff;
-    color: #ff6b81;
+    color: var(--corRosa);
     transition: all 0.3s linear;
     
 }
@@ -103,7 +108,7 @@ color: #ffffff;
 .botao1{
     border-radius: 5px;
     border: 2px solid white;
-    background-color: #ff6b81;
+    background-color: var(--corRosa);
     color: #fcfcfc;
     padding: 20px;
     margin-right: 50px;
@@ -115,7 +120,7 @@ color: #ffffff;
 .botao2{
     border-radius: 5px;
     border: 2px solid white;
-    background-color: #ff6b81;
+    background-color: var(--corRosa);
     color: #ffffff;
     padding: 20px;
     margin-right: 50px;
@@ -143,7 +148,7 @@ main{grid-area: principal;
 }
 
 .caract{
-    color: #ff6b81;
+    color: var(--corRosa);
     padding: auto;
     margin-bottom: 20px;
 }
@@ -169,7 +174,7 @@ main{grid-area: principal;
 }
 
 .bloco1{
-    background-color: #ff6b81;
+    background-color: var(--corRosa);;
     border-radius: 7px;
     padding: 30px;
     padding-top: 10px;
@@ -209,7 +214,7 @@ div > h3{
 /* FOOTER */
 .rodape{
     grid-area: rodape;
-    background-color: #ff6b81;
+    background-color:var(--corRosa);;
     color: #fff;
 }
 
@@ -327,14 +332,14 @@ div > h3{
         height: auto;
     }
 
-    /* .conteudo_blocos{
-        /* column-gap: 15px;
+    .conteudo_blocos{
+        column-gap: 15px;
         padding: 40px;
         display: flex;
         flex-wrap: wrap;
         row-gap: 20px;
         margin: 10px;
-        column-gap: 15px; */
+        column-gap: 15px;
     
     }
 
@@ -367,6 +372,7 @@ div > h3{
         margin-bottom: 20px;
 
     } */
+
     .conteudo_principal{
         padding: 70px;
         margin: 0 auto;
