--- a/css/style.css
+++ b/css/style.css
@@ -139,10 +139,11 @@ main{grid-area: principal;
     /* display: flex; */
     /* flex-direction:column;
     align-items: center; */
-    padding: 30px;
+    padding: 40px;
     /* margin-top: 30px;
     margin: 15px 650px 30px; */
     text-align: center;
+    border: 2px solid black;
     
     
 }
@@ -247,13 +248,26 @@ div > h3{
     .cabecalho2{
         display: grid;
         text-align: center;
-        justify-items: start;
+        justify-items: center;
+        margin: 0 auto;
+        /* border: 2px solid red; */
     }
-    .cabecalho2_div{
+    .cabecalho_div{
         align-items: center;
+        
         margin: auto;
         padding: 40px;
+        border: 3px solid greenyellow;
     }
+    .cabecalho2_titulo{
+        font-size: 30px;
+    }
+
+    .cabecalho_div{
+        margin: 0 auto;
+        font-size: 10%;
+    }
+
     .cabecalho2_smart{
         margin: 0 auto;
         margin-bottom: 20px;
@@ -272,11 +286,32 @@ div > h3{
         grid-template-columns: repeat(2,1fr);
     } */
 
-    .conteudo_bloco1{
-        width: 300px;
+    .bloco1{
+        width: 500px;
         height: 300px;
+        
     }
-    .conteudo_bloco1 > h3, .conteudo_bloco1 > p{
+
+    .conteudo_blocos{
+        border: 2px solid red;
+        /* padding: 40px; */
+        display: flex;
+        /* flex-wrap: wrap; */
+        /* row-gap: 20px; */
+        /* margin: 10px; */
+        /* column-gap: 20px; */
+    }
+
+    /* .conteudo{
+        
+        padding: 40px;
+        padding-left: 40px;
+        padding-bottom: 30px;
+        padding-top: 50px;
+
+    } */
+    
+    .bloco1 > h3, .bloco1 > p{
         padding: 10px;
     }
 
@@ -286,16 +321,26 @@ div > h3{
     }
     .botao1,.botao2{
         width: 200px;
+        justify-content: center;
     }
-}
+
+    /* .conteudo_blocos::after {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+}  */
+
+    /* .bloco1{
+        font-size: 1;
+    } */
 
 
 /* SMARTPHONE */
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 750px){
 
-    .cabecalho_ini{
+    /* .cabecalho_ini{
         padding: 20px;
-    }
+    } */
     
     .cabecalho2_titulo{
         font-size: 30px;
@@ -321,9 +366,11 @@ div > h3{
     }
 
     .cabecalho_ini{
-        padding: 40px;
+        padding: 10px;
         width: 100%;
-        font-size: 20px;
+        text-align: justify;
+        font-size: 100%;
+        border: 2px solid red;
     }
 
     .cabecalho2_smart{
@@ -343,6 +390,18 @@ div > h3{
     
     }
 
+    .cabecalho2_titulo{
+        
+        border: 2px solid red;
+    }
+
+    .cabecalho_div{
+        border: 2px solid green;
+        /* text-align: center; */
+         margin: 0 auto; 
+        
+    }
+
     .cabecalho_ini{
         padding: 10px;
         padding-left: 15px;
@@ -351,6 +410,8 @@ div > h3{
         margin-right: 15px;
         margin-top: 10px;
         margin-bottom: 20px;
+        border: 2px solid black;
+        
         
 
     }
@@ -384,6 +445,9 @@ div > h3{
 
     .rodape{
         margin: 0 auto;
+        /* justify-content: center */
+
+        
     }
 
     .rodape_dados{
