--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 /* VARIAVEIS */
 :root{
-    --corRosa:#6b86ff;
+    --corRosa: #ff6b81;
 }
 
 
@@ -77,6 +77,7 @@ color: #ffffff;
     
 }
 
+
 .cabecalho2{
     display: flex;
     flex-direction: row;
@@ -143,7 +144,7 @@ main{grid-area: principal;
     /* margin-top: 30px;
     margin: 15px 650px 30px; */
     text-align: center;
-    border: 2px solid black;
+
     
     
 }
@@ -254,10 +255,8 @@ div > h3{
     }
     .cabecalho_div{
         align-items: center;
-        
         margin: auto;
         padding: 40px;
-        border: 3px solid greenyellow;
     }
     .cabecalho2_titulo{
         font-size: 30px;
@@ -287,29 +286,31 @@ div > h3{
     } */
 
     .bloco1{
-        width: 500px;
-        height: 300px;
+        width: 300px;
+        height: 200px;
         
     }
 
     .conteudo_blocos{
-        border: 2px solid red;
         /* padding: 40px; */
         display: flex;
         /* flex-wrap: wrap; */
         /* row-gap: 20px; */
         /* margin: 10px; */
         /* column-gap: 20px; */
+        
+        text-align: center;
+        
     }
 
-    /* .conteudo{
+    .bloco1{
+        text-align: center;
+        /* align-items:center; */
         
-        padding: 40px;
-        padding-left: 40px;
-        padding-bottom: 30px;
-        padding-top: 50px;
-
-    } */
+    }
+        
+        
+    } 
     
     .bloco1 > h3, .bloco1 > p{
         padding: 10px;
@@ -370,7 +371,7 @@ div > h3{
         width: 100%;
         text-align: justify;
         font-size: 100%;
-        border: 2px solid red;
+        
     }
 
     .cabecalho2_smart{
@@ -390,13 +391,10 @@ div > h3{
     
     }
 
-    .cabecalho2_titulo{
-        
-        border: 2px solid red;
-    }
+    /* .cabecalho2_titulo{
+    } */
 
     .cabecalho_div{
-        border: 2px solid green;
         /* text-align: center; */
          margin: 0 auto; 
         
@@ -409,9 +407,7 @@ div > h3{
         height: auto;
         margin-right: 15px;
         margin-top: 10px;
-        margin-bottom: 20px;
-        border: 2px solid black;
-        
+        margin-bottom: 20px;     
         
 
     }
@@ -454,7 +450,17 @@ div > h3{
         flex-direction:column;
         /* padding-bottom: 10px; */
         /* row-gap: 20px; */
-        margin: 100px;
+        margin: 0 auto;
+        align-items: center;
+        padding: 0;
+
+
+
+    }
+
+    .rodape_dados div{
+        margin-bottom: 20px;
+
 
     }
 
